--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
+/*
+
+Seccion: pagina raiz-base
+
+*/
+
+:root{
+    --azul-grad-celeste: linear-gradient(45deg, rgb(21, 7, 223),rgb(0, 140, 255));
+    --celeste:  rgb(0, 153, 255);
+    --azul: rgb(36, 40, 255);
+    --verde-claro: rgb(47, 179, 47);
+    --verde-oscuro: rgb(0, 78, 21);
+    --gris-transparente: rgba(125, 129, 131, 0.589);
+    --fondo-rosado-claro: #ffdddd;
+    --gris-claro: #bbbbbb;
+    --verde-grad-azul: linear-gradient(45deg, rgb(7, 223, 115),rgb(0, 140, 255));
+
+    /* nuevo root */
+    --verde-agua: #2ec4b6;
+
+    
+    --celeste-claro: #bee9e8;
+    --celeste: #62b6cb;
+    --azul: #1b4965;
+    --celeste-blanco: #cae9ff;
+    --celeste-oscuro: #5fa8d3;
+
+}
+
+
+
 /*Logo pagina*/
 .logo{
     width: 150px;
@@ -6,10 +37,19 @@
 a {
     text-decoration: none;
 }
+
+
+/*
+
+Nueva seccion: index
+
+*/
+
 /* Barra de navegacion*/
-.navbar {
+.navbar.principal {
     padding: 0.8rem;
-    background: linear-gradient(45deg, rgb(21, 7, 223),rgb(0, 140, 255));
+    background: var(--celeste-oscuro);
+
 }
 .navbar-collapse {
     align-items: center;
@@ -33,30 +73,41 @@ a {
     border: white solid 3px;
 }
 .btn-pers{
-    background-color: rgb(0, 153, 255);
+    background-color: var(--azul);
     color: white;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 .btn-pers:hover{
-    background-color: rgb(36, 40, 255);
-    color: white;
+    background-color: var(--celeste-claro);
+    color: black;
 }
 .btn-pers.green{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-    background-color: rgb(47, 179, 47);
+    background-color: var(--azul);
 }
 .btn-pers.green:active{
     background-color: rgb(47, 179, 47);
     color: white;
 }
 .btn-pers.green:hover{
-    background-color: rgb(0, 78, 21);
+    background-color: var(--celeste-claro);
+    color: black;
 }
 @media screen and (max-width: 991px){
     .nav-item{
         padding: 0.3rem;
     }
 }
+
+/* barra navegacion inicio de sesion*/
+.usuario-icono{
+    width: 50px;
+}
+
+.navbar.usuario{
+    padding: 0.1rem;
+}
+
 
 /* Carrusel */
 .img-carr{
@@ -86,6 +137,8 @@ a {
     width: 250px;
     margin: 20px;
 }
+
+
 /* boton agendar y video */
 .sobreponer {
     position: absolute;
@@ -97,16 +150,17 @@ a {
     justify-content: center;
 }
 .btn-pers.cita{
-    background-color: rgb(0, 60, 255);
+    background-color: var(--celeste-claro);
     font-size: 30px;
     border-radius: 40px;
     margin-bottom: 10px;
+    color: black;
 }
 .btn-pers.cita:hover{
-    background-color: rgb(0, 11, 172);
+    background-color: var(--celeste-oscuro);
 }
 .btn-pers.cita:active{
-    background-color: rgb(0, 60, 255);
+    background-color: var(--azul);
     color: white;
 }
 
@@ -128,6 +182,7 @@ a {
     }
 }
 
+
 /* especialidades */
 .bg-seccion{
     background-color: rgb(230, 230, 230);
@@ -136,11 +191,10 @@ a {
     margin-top: 2rem;
     height: 50px;
 }
-.card{
+.card.especialidades{
     background-color: rgb(242, 246, 248);
-
 }
-.card:hover{
+.card.especialidades:hover{
     background-color: rgba(125, 129, 131, 0.589);
 }
 .titulo-especialidad{
@@ -148,9 +202,8 @@ a {
     
 }
 
-/* comentarios */
 
-  
+/* comentarios */
 .parallax {
     background-image: url("/img/index/comentarios-bg.jpg");
     height: 100%;
@@ -170,11 +223,9 @@ a {
 
 /*
 
-Nueva seccion
+Nueva seccion: Login 
 
 */
-
-/* Seccion: Login */
 
 .login,
 .image-login {
@@ -195,12 +246,9 @@ Nueva seccion
 
 /*
 
-Nueva seccion
+Nueva seccion: registro
 
 */
-
-/* Seccion: registro */
-
 
 /* Style the form */
 #regForm {
@@ -256,4 +304,34 @@ Nueva seccion
     box-sizing: border-box;
     align-items: center;
     justify-content: center;
+}
+
+
+/*
+
+Nueva seccion: administrador
+
+*/
+
+.nav-item.admin{
+    background-color: rgb(212, 231, 236);
+    padding: 0;
+}
+.nav-link.admin{
+    color: black;
+}
+
+.card.admin{
+    border: 1px solid black;
+}
+
+.imagen.user-admin{
+    height: 80px;
+}
+
+.col-2.admin{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
 }
